--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "emoji-picker-react": "^4.4.7",
     "firebase": "^9.12.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-cropper": "^2.1.8",
     "react-dom": "^18.2.0",
+    "react-easy-emoji": "^1.8.0",
     "react-icons": "^4.4.0",
     "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.5",
