--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^9.12.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-audio-voice-recorder": "^1.0.4",
     "react-cropper": "^2.1.8",
     "react-dom": "^18.2.0",
     "react-easy-emoji": "^1.8.0",
